# FinWalk

./: README.md
FinWalks/: BUG_FIXES_SUMMARY.md  DEPLOYMENT.md  OPTIMIZATION_SUMMARY.md  Procfile  TIINY_HOST_DEPLOYMENT.md  app.json  app.py  gunicorn.conf.py  index.html  pyproject.toml  replit.md  test_smc_error.py  test_sqrt_analysis.py  test_trading_mood.py
FinWalks/attached_assets/: Pasted--1-Statistical-Arbitrage-StatArb-Cointegration-Used-in-pair-trading-and-mean-reverting-strateg-1754405094807_1754405094810.txt  Pasted-1-Intraday-Trading-Minutes-to-Hours-Focus-Short-term-price-micro-patterns-volatility-bursts-or-1754404954441_1754404954442.txt
