[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "yfinance>=0.2.64",
    "pandas>=2.3.0",
    "twilio>=9.6.5",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.1",
    "psutil>=7.0.0",
]
